ingress/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: webserver
spec:
  rules:
  - host: "webserver.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-server-service
            port:
              number: 8080
